syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.gruzilkin.fileserver.common";

import "google/protobuf/empty.proto";

package blockstorage;

message BlockSaveRequest {
  bytes blockContent = 1;
}

message BlockSaveResponse {
  string blockId = 1;
  string hash = 2;
}

message BlockReadRequest {
  repeated string blockHash = 1;
}

message BlockReadResponse {
  bytes blockContent = 1;
}

service BlockStorageService {
  rpc save(BlockSaveRequest) returns (BlockSaveResponse);
  rpc read(BlockReadRequest) returns (stream BlockReadResponse);
}